--- a/Styles.css
+++ b/Styles.css
@@ -55,7 +55,7 @@ header a {
 
 header nav {
     display: -ms-flexbox;
-    display: flex;
+    /*display: flex;*/
 }
 
 .topnav {
@@ -71,9 +71,9 @@ header nav {
 
 .sociallinks {
     -ms-flex-direction: column;
-    flex-direction: column;
+    /*flex-direction: column;*/
     -ms-flex-align: end;
-    align-items: flex-end;
+    /*align-items: flex-end;*/
     width: 7rem;
     height: 2000px;
 }
