--- a/Styles.css
+++ b/Styles.css
@@ -41,7 +41,8 @@ header {
     -ms-flex-align: start;
     align-items: flex-start;
     padding: 20px;
-    height: 20vh;
+    /*height: 20vh;*/
+    height: 200px;
     min-height: 140px;
     max-width: 100vw;
 }
@@ -77,7 +78,6 @@ header nav {
     flex-direction: column;
     -ms-flex-align: end;
     align-items: flex-end;
-    height: 140px;
     width: 7rem;
 }
 
