--- a/Styles.css
+++ b/Styles.css
@@ -43,7 +43,7 @@ header {
     padding: 20px;
     /*height: 20vh;*/
     height: 200px;
-    min-height: 140px;
+    /*min-height: 140px;*/
     max-width: 100vw;
 }
 
