--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,7 @@ canvas {
 
 #startButton {
     width: 100px;
-    height: 100px;
+    height: 100vh;
     background: #0f0;
+    margin: 0 auto;
 }
