--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,6 @@ canvas {
 #startButton {
     width: 100px;
     height: 100vh;
-    background: #0f0;
+    background: #00f;
     margin: 0 auto;
 }
