--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@ canvas {
 #startButton {
     width: 100px;
     height: 100vh;
-    background: #00f;
+    background: #f0f;
     margin: 0 auto;
 }
 
